Modified: Changes in Oldgame Window (Loading box, next and previous button's style, format label).

--- a/lang/pt_BR.xml
+++ b/lang/pt_BR.xml
@@ -993,7 +993,7 @@
 			Próximas
 		</oldgame_next>
 		<oldgame_format>
-			Formato: dd/mm/aaaa
+			(dd/mm/aaaa)
 		</oldgame_format>
 		<oldgame_no_moves>
 			Jogo sem movimentos feitos
@@ -1330,4 +1330,3 @@
 		</tourney_add_round>
 	</tourney>
 </language>
-
