Removed: Top menu icons; Changed: Menu icons to words;

--- a/lang/pt_BR.xml
+++ b/lang/pt_BR.xml
@@ -150,7 +150,7 @@
 	</login>
 	<menu>
 		<menu_adjourn>
-			Adjudicar
+			Administração
 		</menu_adjourn>
 		<menu_search_game>
 			Buscar Partida
